--- a/.dockerignore
+++ b/.dockerignore
@@ -73,4 +73,5 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 # No need to include the Dockerfile we're building the WordPress container from, etc
-test/docker
+tests/docker
+tests/_docker
