--- a/.github/workflows/new-pull-request.yml
+++ b/.github/workflows/new-pull-request.yml
@@ -2,9 +2,9 @@ name: Run Unit Tests and create translations when creating a PR
 
 # Run Unit Test and POT files when new PR is created
 on:
-  push:
-    branches:
-      - main
+#   push:
+#     branches:
+#       - main
   pull_request:
     branches:
       - main
@@ -19,6 +19,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        with:
+          repository: eighty20results/Utilities
 
       - name: Setup PHP with Composer V2+
         uses: shivammathur/setup-php@v2
@@ -41,49 +43,54 @@ jobs:
           key: ${{ runner.os }}-composer-cache-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-cache
           path: inc/**
+        env:
+          E20R_PLUGIN_NAME: 00-e20r-utilities
 
       - name: Install all needed dependencies for Composer
         shell: bash
         if: steps.restore-cache.outputs.cache-hit != 'true'
         run: make composer-dev
+        env:
+          E20R_PLUGIN_NAME: 00-e20r-utilities
 
       - name: Install all needed WordPress plugin dependencies
         shell: bash
         if: steps.composer-cache.outputs.cache-hit != 'true'
         run: make wp-deps
+        env:
+          E20R_PLUGIN_NAME: 00-e20r-utilities
 
       - name: Install all needed dependencies for Docker
         shell: bash
         if: steps.composer-cache.outputs.cache-hit != 'true'
         run: make docker-deps
+        env:
+          E20R_PLUGIN_NAME: 00-e20r-utilities
 
       - name: Run all Standard Tests
         shell: bash
         run: make tests
         env:
-          E20R_PLUGIN_NAME: ${{ env.E20R_PLUGIN_NAME }}
+          E20R_PLUGIN_NAME: 00-e20r-utilities
           GITHUB_TOKEN: ${{ secrets.GITHUB }}
           DOCKER_USER: ${{ secrets.DOCKER_USER }}
           CONTAINER_ACCESS_TOKEN: ${{ secrets.CONTAINER_ACCESS_TOKEN }}
 
   build_i18n:
-    # Only run when the pull request is created
-    if: github.event.pull_request.opened == true
     name: Build the I18N translation files
     needs: [pr_tests]
     runs-on: ubuntu-18.04
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        with:
+          repository: eighty20results/Utilities
 
       - name: WordPress .pot File Generator for 00-e20r-utilities
         uses: iamdharmesh/action-wordpress-pot-generator@main
         with:
-          # FIXME: May need to update the path (location where the .POT file will be copied to)
           destination_path: './languages'
-          # FIXME: Update the slug variable to match your plugin's slug
-          slug: ${{ env.E20R_PLUGIN_NAME }}
-          # FIXME: Update the text_domain variable to match your plugin's text domain (normally the same as the slug)
-          text_domain: 'e20r-wordpress-plugin-cicd-env'
+          slug: '00-e20r-utilities'
+          text_domain: '00-e20r-utilities'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
